<resources>
    <string name="app_name">Golden_Bench</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="are_you_forgot_password">Are You Forgot Password</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="continues">Continues</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="select_user_type">Select User Type</string>
    <string name="professional">Professional</string>
    <string name="follower">Follower</string>
    <string name="email">Email</string>
    <string name="player_name">Player Name</string>
    <string name="last_name">Last Name</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="player">Players</string>
    <string name="agents">Agents</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="favourite">Favourite</string>
    <string name="followers">Followers</string>
    <string name="myblog">MBlog</string>
    <string name="voice">My Voice</string>
    <string name="photos">Photos</string>
    <string name="profile">Profile</string>
    <string name="manageplayer">Mange Player</string>
    <string name="share">share</string>
    <string name="third_move">third Move</string>
    <string name="seconed_move">Seconed Move</string>
    <string name="move">First Move</string>
    <string name="profiessional_account">Profiessional Account</string>
    <string name="home">Home</string>
    <string name="web_site">Web Site</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="exit">Exit</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="current_posts_with_the_team">Current posts with the team</string>
    <string name="add">Add</string>
    <string name="current_posts_with_the_national_team">Current posts with the national team</string>
    <string name="the_teams_i_played_in">The teams I played in</string>
    <string name="demonstration_video">demonstration video</string>
    <string name="attack">Attack</string>
    <string name="center">Center</string>
    <string name="defense">Defense</string>
    <string name="keeper">Keeper</string>
    <string name="add_blog">Add Blog</string>
    <string name="more">More</string>
    <string name="add_photo">ِAdd Photo</string>
    <string name="likes">Likes And Comments</string>
    <string name="message">Message</string>
    <string name="accept">Accept</string>
    <string name="logout">Logout</string>
    <string name="through_this_platform_you_can_follow_the_skills_of_your_favorite_players">Through this platform, you can follow the skills of your favorite players</string>
</resources>
