<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/studiem"
    >

    <FrameLayout
        android:id="@+id/llSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fitsSystemWindows="true"
                android:fillViewport="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"

                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray5"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/user_name"
                        android:textColorHint="@color/gray7"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray5"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/phone"
                        android:textColorHint="@color/gray7"
                        />



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray5"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:padding="8dp"
                        android:gravity="top"
                        android:hint="@string/message"
                        android:textColorHint="@color/gray7"

                        />
                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@color/book_trans"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/accept"
                        />
                </LinearLayout>
            </ScrollView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>