<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintVertical_bias=".3"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:singleLine="true"
                        android:background="@color/transparent"
                        android:textColor="@color/black"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/user_name"
                        android:textSize="14sp"
                        android:textColorHint="@color/white"


                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleTint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false"
                        app:errorEnabled="false"
                        >
                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:singleLine="true"
                            android:background="@color/transparent"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:hint="@string/password"
                            android:textSize="14sp"
                            android:textColorHint="@color/white"



                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/btn_login_bg"
                    app:layout_constraintVertical_bias="0"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    />

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="5dp"

                    android:text="@string/are_you_forgot_password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="end"

                    tools:ignore="RtlCompat" />
            </LinearLayout>


            <Button
                android:id="@+id/btnNewAccount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_sign_up"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/register"
                android:textAllCaps="false"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>