<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/seconed_move"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                />



            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintVertical_bias=".1"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:singleLine="true"
                        android:background="@color/transparent"
                        android:textColor="@color/black"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/job_title"
                        android:textSize="14sp"
                        android:textColorHint="@color/white"


                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:singleLine="true"
                        android:background="@color/transparent"
                        android:textColor="@color/black"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/company_name"
                        android:textSize="14sp"
                        android:textColorHint="@color/white"


                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/white"
                        android:spinnerMode="dialog"

                        />
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_marginBottom="8dp"
                    />



            </LinearLayout>


            <Button
                android:id="@+id/btnNewAccount"
                android:layout_width="130dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/gray6"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/continues"
                android:textAllCaps="false"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>