<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/third_move"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintVertical_bias=".1"
                >


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"
                        android:spinnerMode="dialog"

                        />
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_marginBottom="8dp"
                    />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="25dp"
                    >
                  <androidx.recyclerview.widget.RecyclerView
                      android:id="@+id/recVtiew"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

                  </androidx.recyclerview.widget.RecyclerView>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <Button
                android:id="@+id/btnNewAccount"
                android:layout_width="130dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                app:layout_constraintStart_toEndOf="@+id/btnSkip"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/gray6"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/finish"
                android:textAllCaps="false"

                />
            <Button
                android:id="@+id/btnSkip"
                android:layout_width="90dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_skip"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/skip"
                android:textAllCaps="false"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>