<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="lang"
            type="String" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray4"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="end"

                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="3dp"
                        android:src="@drawable/ic_add"
                        android:tint="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/add_blog"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        />
                    <ProgressBar
                        android:id="@+id/progBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:id="@+id/tvNoOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:visibility="gone"
                        />
                </FrameLayout>
                <LinearLayout
                    android:id="@+id/ll_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="8dp"

                    android:layout_gravity="end"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/more"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="3dp"
                        android:src="@drawable/ic_arrow_right"
                        android:tint="@color/black"
                        android:rotation="90"
                        />


                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:background="@color/black"
                    android:text="@string/skip"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recview1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        />
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:visibility="gone"
                        />
                </FrameLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
